--- a/Mark3/app/src/main/AndroidManifest.xml
+++ b/Mark3/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
     <application
         android:name=".activities.Parseuseractivity"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/bluecollarstart"
         android:label="Blue Collar Services"
         android:theme="@style/AppTheme"
         >
@@ -41,6 +42,23 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.Formone"
+            android:label="@string/app_name" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.Formtwo"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.Signup"
             android:label="@string/app_name" >
